kubernetes-networks/canary/canary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: canary-web
    spec:
      containers:
        - name: canary-web
          image: olgakoch/otus:kubernetes-networks-canary
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
