kubernetes-networks/canary/prod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: prod-web
    spec:
      containers:
        - name: prod-web
          image: olgakoch/otus:kubernetes-intro-web
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
        - name: app
          emptyDir: { }
