kubernetes-networks/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "test"
    nginx.ingress.kubernetes.io/canary-by-header-value: "canary"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /web
          pathType: Prefix
          backend:
            service:
              name: canary-svc
              port:
                number: 8000
