kubernetes-networks/canary/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /web
          pathType: Prefix
          backend:
            service:
              name: prod-svc
              port:
                number: 8000
